# Diffraction

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  PROJECT_OVERVIEW.md  README.md  diffract.sh  diffract.yaml.example  diffraction.sh  install.sh  instructions.md  package-lock.json  package.json
.mulch/: mulch.config.yaml
.overstory/: config.yaml  groups.json
.seeds/: config.yaml  issues.jsonl
agent/: .detect-secrets.cfg  .dockerignore  .env.example  .pre-commit-config.yaml  .secrets.baseline  .swiftformat  .swiftlint.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.sandbox  Dockerfile.sandbox-browser  Dockerfile.sandbox-common  README.md  SECURITY.md  VISION.md  appcast.xml  diffract.mjs  diffraction.podman.env  docker-compose.yml  docs.acp.md  fly.private.toml  fly.toml  knip.config.ts  package.json  render.yaml  tsconfig.json  tsdown.config.ts  vitest.config.ts  vitest.e2e.config.ts  vitest.extensions.config.ts  vitest.performance-config.ts  vitest.scoped-config.ts  vitest.unit-paths.mjs  vitest.unit.config.ts
api/: package-lock.json  package.json  relay-server.js  server.js
blueprints/: default.yaml
cli/: .coderabbit.yaml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  install.sh  models.json  package-lock.json  package.json  pyproject.toml  spark-install.md  uninstall.sh
crates/diffract-policy/: Cargo.toml
crates/diffract-policy/src/: lib.rs
crates/diffract-providers/: Cargo.toml
crates/diffract-providers/src/: lib.rs
crates/diffract-tui/: Cargo.toml
crates/diffract-tui/src/: app.rs  event.rs  lib.rs
crates/diffract-tui/src/ui/: mod.rs  sandbox_draft.rs  splash.rs
dashboard/: index.html
docs/: CONTRIBUTING.md  conf.py  index.md  project.json  setup-guide.md
e2e/: Dockerfile  playwright.config.ts  sandbox-create.spec.ts  tsconfig.json
engine/: README.md
policies/: base.yaml
proto/: datamodel.proto  diffract.proto  inference.proto  sandbox.proto  test.proto
scripts/: brev-setup.sh  build-release.sh  deploy-vps.sh  diffract-forward-watchdog.sh  diffract-gateway-bridge.sh  diffract-sandbox-entry.sh  forward-watchdog.sh  gateway-watchdog.sh  install-openshell.sh  install.sh  setup-spark.sh  setup.sh  (+10 more)
(+5417 files in other folders)
