# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "diffract-tui"
description = "Diffract interactive TUI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
diffract-core = { path = "../diffract-core" }
diffract-bootstrap = { path = "../diffract-bootstrap" }
diffract-policy = { path = "../diffract-policy" }
diffract-providers = { path = "../diffract-providers" }

base64 = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
terminal-colorsaurus = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true, features = ["tls"] }
miette = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
